Update dependencies, remove unwanted custom tasks in favor of geradle provided tasks, fix binor bug in logging config regarding class name not added to logs, make installDist a dependency of built so JAR with cli is generated and installed for direct use.